# SearchForm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirments.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
form/: db.json  request_test.py
form/form/: settings.py  urls.py
form/searchform/: models.py
form/searchform/api/: urls.py  views.py
form/services/: searchform_service.py  validation_service.py
formdb/: formcollection.bson  formcollection.metadata.json
src/: pytest.ini
src/form/: settings.py  urls.py
src/searchform/: urls.py  views.py
src/searchform/repo/: mongo_repo.py
src/searchform/services/: __init__.py  searchform_service.py  validation_service.py
src/tests/: conftest.py  test_form.py
